--- a/nist/scss/layout/_content.scss
+++ b/nist/scss/layout/_content.scss
@@ -75,6 +75,13 @@ h3{
     -webkit-order: 2;
     padding-bottom: 105px;
     margin-top: 106px;
+    .wrapper{
+    	align-items: flex-start;
+    	padding-top: 60px;
+    	&.flex{
+    		flex-wrap: wrap;
+    	}
+    }
 }
 
 .btn{
@@ -89,6 +96,24 @@ h3{
 	transition: 0.3s linear;
 	&:hover{
 		background: #232323;
+	}
+	&_card{
+		width: 250px;
+		letter-spacing: 0;
+		margin-right: 30px;
+		&:last-child{
+			margin-right: 0;
+		}
+	}
+	&_2{
+		border: 1px solid #e6e6e6;
+		background: #fff;
+		color: #282828;
+		&:hover{
+			background: #e73f34;
+			border: 1px solid #e73f34;
+			color: #fff;
+		}
 	}
 }
 
@@ -147,6 +172,9 @@ h3{
 			}
 		}
 	}
+	.wrapper{
+		padding: 0;
+	}
 }
 
 .otext{
@@ -160,11 +188,11 @@ h3{
 }
 
 .equipment{
-	padding: 60px 0 40px;
+	padding: 0 0 40px;
 	position: relative;
 	z-index: 3;
 	&__otext{
-		top: 129px;
+		top: 70px;
 	}
 	&__cont{
 		&.flex{
@@ -413,6 +441,377 @@ h3{
   	box-shadow: 0 0 0 9999px rgba(34,35,35,0.9) inset;
 }
 
+/*Catalog*/
+.pagebanner{
+	padding: 100px 0;
+	background-size: cover !important;
+	.wrapper{
+		padding: 0;
+	}
+	&__title{
+		font: 24px/48px $font-bol;
+		color: #282828;
+		letter-spacing: 0.2em;
+		text-transform: uppercase;
+	}
+	&_1{
+		background: url(../img/banner1.jpg) center center no-repeat;
+	}
+	&_2{
+		background: url(../img/banner2.jpg) center center no-repeat;
+	}
+	&_3{
+		background: url(../img/banner3.jpg) center center no-repeat;
+	}
+	&_4{
+		background: url(../img/banner4.jpg) center center no-repeat;
+	}
+}
+.breadcrumbs{
+	list-style: none;
+	&.flex{
+		justify-content: flex-start;
+		flex-wrap: wrap;
+	}
+	li{
+		a,span{
+			font: 12px/30px $font-reg;
+			color: #7c7c7c;
+			letter-spacing: 0.2em;
+			text-transform: uppercase;
+		}
+		span{
+
+		}
+	}
+}
+.sidebar{
+	width: 285px;
+	padding: 23px 27px;
+	border: 1px solid #f0f0f0;
+	border-right: 0;
+	&__title{
+		font: 18px/24px $font-med;
+		color: #161616;
+		margin-bottom: 18px;
+	}
+	&__cont{
+		padding-bottom: 20px;
+		border-bottom: 1px solid #ededed;
+		margin-bottom: 20px;
+		&:last-child{
+			margin-bottom: 0;
+			border-bottom: 0;
+		}
+	}
+}
+.main{
+	width: 855px;
+	border-bottom: 0;
+}
+.checkbox{
+	display: none;
+}
+.checkboxlabel{
+	display: inline-block;
+	cursor: pointer;
+	position: relative;
+	padding: 4px 0 5px 40px;
+	font: 13px/26px $font-reg;
+	color: #4a4a4a;
+	&:before{
+		content: "";
+		border-radius: 3px;
+   		display: inline-block;
+   		width: 24px;
+   		height: 24px;
+   		background: #ededed;
+   		border: 0;
+   		margin-right: 17px;
+   		position: absolute;
+    	left: 0;
+   		top: 4px;
+   		border-radius: 2px;
+	}
+}
+.checkbox:checked + .checkboxlabel:before{
+	content: url(../img/check.png);
+    color: #f3f3f3;
+    background: #e83f33;
+    text-align: center;
+    line-height: 24px;
+}
+.product{
+	width: 284px;
+	cursor: pointer;
+	border: 1px solid #f0f0f0;
+	border-right: 0;
+	&:nth-child(3n){
+		border-right: 1px solid #f0f0f0;
+	}
+	&:last-child{
+		border-right: 1px solid #f0f0f0;
+	}
+	&:hover{
+		box-shadow: 0px 0px 15px 0px rgba(36, 39, 41, 0.1); 
+		.product__more{
+			background: #e83f33;
+			color: #fff;
+			&_3{
+				color: #e73e32;
+				background: none;
+			}
+		}
+	}
+	&__cont{
+		&.flex{
+			align-items: stretch;
+			flex-wrap: wrap;
+		}
+		&_2{
+			margin-bottom: 65px;
+		}
+	}
+	&__img{
+		width: 100%;
+		height: 250px;
+		border-bottom: 1px solid #f0f0f0;
+		&.flex{
+			justify-content: center;
+		}
+	}
+	&__info{
+		padding: 25px 24px 40px;
+	}
+	&__title{
+		color: #161616;
+		font: 18px/30px $font-med;
+	}
+	&__desc{
+		margin-bottom: 25px;
+		color: #747474;
+		font: 13px/24px $font-reg;
+	}
+	&__price{
+		color: #404040;
+		font: 14px/18px $font-reg;
+		padding: 3px 0;
+		&_2{
+			font-family: $font-med;
+		}
+	}
+	&__more{
+		color: #404040;
+		font: 14px/24px $font-reg;
+		background: none;
+		border: 0;
+		transition: 0.2s ease-in-out;
+		&_2{
+			background: #f6f6f6;
+		}
+		&_3{
+			text-transform: uppercase;
+			text-decoration: underline;
+			font-family: $font-med;
+		}
+	}
+	&__bts{
+		&.flex{
+			flex-wrap: wrap;
+		}
+	}
+}
+.cardprod{
+	width: 100%;
+	&.flex{
+		flex-wrap: wrap;
+		align-items: flex-start;
+	}
+	&__slider{
+		width: 552px;
+		margin-bottom: 35px;
+	}
+	.slick-dots{
+		display: flex;
+	    justify-content: center;
+	    align-items: center;
+	    list-style: none;
+	    padding-top: 35px;
+	    position: absolute;
+	    width: 100%;
+	    bottom: 50px;
+	    height: 18px;
+	    min-height: 18px;
+	    li{
+	    	margin: 0 4px;
+	    }
+		button{
+			width: 18px;
+		    height: 18px !important;
+		    min-height: 16px;
+		    background: transparent;
+		    border: 2px solid #131313;
+		    text-indent: 9999px;
+		    padding: 0;
+		}
+		.slick-active{
+			button{
+				border-color: #e73e32;
+			}
+		}
+	}
+}
+.prodinfo{
+	width: 552px;
+	&__title{
+		color: #161616;
+		font: 24px/36px $font-bol;
+		letter-spacing: 0.2em;
+		text-transform: uppercase;
+	}
+	&__border{
+		margin: 20px 0 40px;
+	}
+	&__butts{
+		margin-bottom: 30px;
+	}
+	&__chartitle{
+		color: #161616;
+		font: 18px/36px $font-bol;
+		letter-spacing: 0.2em;
+		text-transform: uppercase;
+		margin-bottom: 20px;
+		width: 100%;
+	}
+	&__row{
+		border-bottom: 1px solid #e6e6e6;
+		&:last-child{
+			border-bottom:0;
+		}
+		span{
+			color: #4a4a4a;
+			font: 14px/60px $font-reg;
+		}
+	}
+}
+.destination{
+	margin-bottom: 15px;
+	width: 100%;
+	&.flex{
+		flex-wrap: wrap;
+		align-items: flex-start;
+	}
+	&__item{
+		width: 552px;
+		margin-bottom: 35px;
+		&.flex{
+			align-items: flex-start;
+			justify-content: flex-start;
+		}
+	}
+	&__img{
+		margin-right: 15px;
+	}
+	&__title{
+		color: #4a4a4a;
+		font: 18px/30px $font-reg;
+	}
+	&__text{
+		color: #969696;
+		font: 14px/24px $font-reg;
+		padding-right: 10px;
+	}
+}
+.description{
+	&__text{
+		color: #4a4a4a;
+		font: 14px/30px $font-reg;
+		margin-bottom: 25px;
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+}
+/*Catalog end*/
+.producer{
+	&__border{
+		margin-bottom: 50px;
+	}
+	&__img{
+		width: 552px;
+		img{
+			width: 100%;
+		}
+	}
+	&__title{
+		margin-bottom: 70px;
+	}
+}
+.procedures{
+	&.flex{
+		align-items: stretch;
+		flex-wrap: wrap;
+	}
+	&__item{
+		width: 552px;
+		cursor: pointer;
+		margin-bottom: 35px;
+		&.flex{
+			align-items: stretch;
+		}
+		&:hover{
+			box-shadow: 0px 0px 15px 0px rgba(36, 39, 41, 0.1);
+			.procedures{
+				&__info{
+					background-color: #fff;
+				}
+				&__title{
+					color: #e83f34;
+					text-decoration: underline;
+				}
+				&__img{
+					&:after{
+						opacity: 1;
+					}
+				}
+			}
+		}
+	}
+	&__info{
+		width: 319px;
+		background-color: #f6f6f6;
+		padding: 35px 25px 35px 35px;
+		transition: background-color 0.3s ease-in-out;
+	}
+	&__img{
+		width: 233px;
+		position: relative;
+		&:after{
+			content: "";
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    right: 0;
+		    bottom: 0;
+		    opacity: 0;
+		    transition: opacity 0.3s ease-in-out;
+		    box-shadow: 0 0 0 9999px rgba(231, 62, 50, 0.75) inset;
+		}
+		img{
+			height: 100%;
+		}
+	}
+	&__title{
+		color: #161616;
+		font: 18px/48px $font-med;
+		margin-bottom: 5px;
+	}
+	&__text{
+		color: #4a4a4a;
+		font: 13px/24px $font-reg;
+	}
+}
+
 
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
@@ -428,6 +827,10 @@ h3{
 	.btn{
 		width: 200px;
     	height: 60px;
+    	&_card{
+    		width: 250px;
+    		margin-right: 10px;
+    	}
 	}
 	.banner{
 		&__slide{
@@ -489,6 +892,64 @@ h3{
 			height: auto;
 		}
 	}
+	/*Catalog*/
+	.main{
+		width: 685px;
+	}
+	.product{
+		width: 341px;
+		&__cont{
+			&_2{
+				.product{
+					width: 242px;
+				}
+			}
+		}
+	}
+	.cardprod{
+		&__slider{
+			width: 430px;
+		}
+	}
+	.prodinfo{
+		width: 515px;
+		&__border{
+			margin: 10px 0 20px;
+		}
+		&__butts{
+			margin-bottom: 20px;
+		}
+		&__chartitle{
+			margin-bottom: 10px;
+		}
+		&__row{
+			span{
+				font: 14px/47px "Conv_GothaProReg_0", sans-serif;
+			}
+		}
+	}
+	.destination{
+		&__item{
+			width: 475px;
+		}
+	}
+	/*Catalog end*/
+	.producer{
+		&__img{
+			width: 430px;
+		}
+		&__title{
+			margin-bottom: 20px;
+		}
+	}
+	.procedures{
+		&__item{
+			width: 470px;
+		}
+		&__info{
+			padding: 20px 15px 20px 20px;
+		}
+	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
@@ -533,7 +994,7 @@ h3{
 	}
 	.equipment{
 		&__otext{
-			top: 122px;
+			top: 70px;
 		}
 		&__item{
 			width: 246.67px;
@@ -608,17 +1069,91 @@ h3{
 			height: auto;
 		}
 	}
+	/*Catalog*/
+	.pagebanner{
+		padding: 40px 0;
+	}
+	.sidebar{
+		width: 180px;
+		padding: 15px;
+	}
+	.main{
+		width: 560px;
+	}
+	.product{
+		width: 279px;
+		&__title{
+			font: 17px/28px "Conv_GothaProMed_0", sans-serif;
+		}
+	}
+	/*Catalog end*/
+	.product__cont_2{
+		.product{
+			width: 370px;
+			&:nth-child(3n){
+				border-right: 0;
+			}
+			&:nth-child(2n){
+				border-right: 1px solid #f0f0f0;
+			}
+		}
+	}
+	.cardprod{
+		&.flex{
+			justify-content: space-around;
+		}
+	}
+	.destination{
+		justify-content: space-around;
+    	width: 100%;
+    	&__item{
+    		width: 370px;
+    	}
+	}
+	.producer{
+		&__border{
+			margin-bottom: 25px;
+			&_2{
+				margin-bottom: 20px;
+			}
+		}
+		&__img{
+			margin-bottom: 30px;
+		}
+		&__title{
+			margin-bottom: 10px;
+		}
+		&__info{
+			width: 100%;
+		}
+	}
+	.procedures{
+		&.flex{
+			justify-content: space-around;
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
 	.content{
 		padding-bottom: 45px;
 		margin-top: 60px;
+		.wrapper{
+			padding-top: 30px;
+			&.flex{
+				flex-wrap: wrap;
+			}
+		}
 	}
 	.btn{
 		width: 180px;
     	height: 50px;
     	font: 12px/23px "Conv_GothaProMed_0", sans-serif;
+    	&_card{
+    		margin-bottom: 10px;
+    		margin-right: 15px;
+    		width: 160px;
+    	}
 	}
 	.wrapper{
 		max-width: 95%;
@@ -654,7 +1189,10 @@ h3{
 		left: 0px;
 	}
 	.equipment{
-		padding: 30px 0 15px;
+		padding: 0 0 15px;
+		&__otext{
+			top: 114px;
+		}
 		&__cont{
 			&.flex{
 				justify-content: space-around;
@@ -738,6 +1276,88 @@ h3{
 				[type="submit"]{
 					width: 100%;
 				}
+			}
+		}
+	}
+	/*Catalog*/
+	.pagebanner{
+		padding: 30px 0;
+		.wrapper{
+			padding: 0;
+		}
+	}
+	.sidebar{
+		width: 100%;
+		border-right: 1px solid #f0f0f0;
+		margin-bottom: 15px;
+	}
+	.main{
+		border: 0;
+	}
+	.product{
+		border: 1px solid #f0f0f0 !important;
+		margin-bottom: 10px;
+		&__cont{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+	}
+	/*Catalog end*/
+	.cardprod{
+		&__slider{
+			width: 100%;
+			max-width: 552px;
+		}
+		.slick-dots{
+			bottom: 30px;
+		}
+		&.flex{
+			justify-content: space-around;
+		}
+	}
+	.prodinfo{
+		width: 100%;
+    	max-width: 552px;
+    	&__border{
+    		margin: 15px 0 30px;
+    	}
+    	&__butts{
+    		display: flex;
+    		align-items: center;
+    	}
+    	&__row{
+    		span{
+    			font: 13px/50px "Conv_GothaProReg_0", sans-serif;
+    		}
+    	}
+	}
+	.producer{
+		&__border{
+			margin-bottom: 30px;
+		}
+		&__title{
+			margin-bottom: 20px;
+		}
+	}
+	.procedures{
+		&.flex{
+			justify-content: space-around;
+		}
+		&__item{
+			&.flex{
+				flex-direction: column-reverse;
+    			width: 270px;
+			}
+		}
+		&__info{
+			width: 270px;
+		}
+		&__img{
+			width: 270px;
+			img{
+				height: auto;
+				width: 100%;
 			}
 		}
 	}
