--- a/nist/scss/layout/_content.scss
+++ b/nist/scss/layout/_content.scss
@@ -1185,8 +1185,9 @@ h3{
 		margin-bottom: 15px;
 	}
 	.otext{
-		font: 27px/27px "Conv_GothaProBol_0", sans-serif;
-		left: 0px;
+		/*font: 27px/27px "Conv_GothaProBol_0", sans-serif;
+		left: 0px;*/
+		display: none;
 	}
 	.equipment{
 		padding: 0 0 15px;
