--- a/nist/scss/layout/_footer.scss
+++ b/nist/scss/layout/_footer.scss
@@ -269,6 +269,7 @@ footer{
 		&__nav{
 			width: 100%;
 			margin-right: 0;
+			margin-bottom: 20px;
 			ul{
 				display: flex;
     			flex-wrap: wrap;
@@ -277,13 +278,18 @@ footer{
     				margin-right: 15px;
     			}
 			}
+			.title{
+				margin-bottom: 0;
+			}
 		}
 		&__box{
 			display: flex;
     		flex-wrap: wrap;
     		justify-content: space-between;
+    		margin-bottom: 20px;
     		.title{
     			width: 100%;
+    			margin-bottom: 0;
     		}
 		}
 		&__block{
