--- a/chemodan__shop/scss/layout/_content.scss
+++ b/chemodan__shop/scss/layout/_content.scss
@@ -21,7 +21,7 @@
     -ms-flex-pack: start;
 }
 .wrapper{
-	min-width: $min-width;
+	min-width: 300px;
 	max-width: $max-width;
 	margin: 0 auto;
 	position: relative;
@@ -4379,24 +4379,1007 @@ body{
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     body{min-height: 100vh; width: 100%; display: flex; flex-direction: column;}
 }
-@media screen and (max-width: 1200px) {
-	
-}
-
-@media screen and (min-width: 992px){
-	
-}
-
-@media screen and (max-width: 991px) {
-	
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	.content{
+		.wrapper{
+			max-width: 970px;
+		}
+	}
+	.maincont{
+		width: 720px;
+	}
+	.mainnav{
+		width: 555px;
+	}
+	.mainsearch{
+		padding-right: 0;
+		width: 165px;
+		input{
+			width: 120px;
+			img{
+				right: 40px;
+			}
+		}
+	}
+	.banner{
+		width: 625px;
+		.slick-slide{
+			width: 625px !important;
+    		height: 233px !important;
+    		img{
+    			height: 100%;
+    		}
+		}
+	}
+	.filtertab{
+		font-size: 12px;
+	}
+	.product{
+		&__center{
+			flex-wrap: wrap;
+		}
+		&__left, &__right{
+			width: 100%;
+    		justify-content: space-between;
+    		margin-right: 0;
+		}
+	}
+	.comments{
+		&__p{
+			font-size: 14px;
+		}
+	}
+	.dropdown{
+		width: 720px;
+		&__box{
+			width: 47%;
+		}
+		&__title, &__price{
+			font-size: 12px;
+		}
+		&__itembox{
+			a{
+				font-size: 12px;
+			}
+			&_1{
+				margin-right: 15px;
+			}
+		}
+		&__item{
+			width: 165px;
+			&_brand{
+				width: 170px;
+			}
+			&_brand4{
+				margin-left: 0;
+			}
+			&_type{
+				width: 100%;
+			}
+			&_brand2{
+				width: 100%;
+			}
+			&_brand3{
+				margin-right: 0;
+			}
+		}
+		&__brand{
+			width: 60px;
+		}
+	}
+	/*Wishlist*/
+	.mainbox{
+		&__wishlist{
+			width: 95%;
+		}
+	}
+	/*Goods*/
+	.breadcrumbs{
+		width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 16px;
+	}
+	.filterbox{
+    	width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 0;
+    	align-items: flex-start;
+	}
+	.filterbar{
+		flex-wrap: wrap;
+		&__item{
+			margin-bottom: 10px;
+		}
+	}
+	.goods{
+		justify-content: space-around;
+	}
+	.maincont .interesting .product__price, .maincont .viewed .product__price{
+		font-size: 11px;
+	}
+	/*Feedback*/
+	.comment{
+		width: 95%;
+    	margin: 0 auto 17px;
+    	&__text{
+    		&_2{
+    			width: 462px;
+    		}
+    	}
+	}
+	.goodreview{
+		width: 95%;
+    	margin: 0 auto;
+		&__input{
+			&_1,&_2{
+			    width: 175px;
+			}
+		}
+	}
+	/*Card good*/
+	.cardgood{
+		width: 95%;
+    	margin: 0 auto 15px;
+		&__adv{
+			display: none;
+		}
+	}
+	.filtertabinfo{
+		width: 95%;
+    	margin: 0 auto 20px;
+	}
+	.maingoods{
+		&__cont{
+		    width: 95%;
+    		margin: 0 auto 25px;
+		}
+	}
+	/*Basket*/
+	.basket{
+		width: 95%;
+    	margin: 0 auto;
+    	&__li{
+    		a{
+    			font-size: 15px;
+    		}
+    	}
+	}
+	.perinfo{
+		&__subtitle{
+			width: 300px;
+			br{
+				display: none;
+			}
+		}
+		&__input{
+			&_1{
+				width: 155px;
+			}
+			&_2{
+				width: 155px;
+			}
+			&_3{
+				width: 180px;
+			}
+			&_5{
+				width: 355px;
+			}
+		}
+		&__right{
+			width: 285px;
+		}
+	}
+	.delpay{
+		&__item{
+			&:nth-child(4n){
+				margin-right: 13px;
+			}
+		}
+	}
+	.confirm{
+		&__right{
+			width: 240px;
+		}
+	}
+	/*Balance*/
+	.maintitle{
+		width: 95%;
+    	margin: 0 auto 15px;
+	}
+	.balance{
+		width: 95%;
+		margin: 0 auto 40px;
+		&__col{
+			&:last-child{
+				display: none;
+			}
+		}
+	}
+	/*Account*/
+	.account{
+		flex-wrap: wrap;
+		width: 95%;
+		margin: 0 auto;
+		&__left{
+			width: 100%;
+			margin-bottom: 15px;
+		}
+		&__right{
+			width: 100%;
+		}
+	}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-	
+	.content{
+		.wrapper{
+			max-width: 750px;
+		}
+	}
+	.sidenav{
+		display: none;
+	}
+	.maincont{
+		width: 100%;
+	}
+	.mainnav{
+		width: 555px;
+	}
+	.mainsearch{
+		padding-right: 0;
+		width: 195px;
+		input{
+			width: 150px;
+			img{
+				right: 40px;
+			}
+		}
+	}
+	.banner{
+		width: 655px;
+		.slick-slide{
+			width: 655px !important;
+    		height: 233px !important;
+    		img{
+    			height: 100%;
+    		}
+		}
+	}
+	.filtertab{
+		font-size: 12px;
+		margin-bottom: 10px;
+	}
+	.categories{
+		&__item{
+			width: 47.8%;
+		}
+	}
+	.product{
+		&__center{
+			flex-wrap: wrap;
+		}
+		&__left, &__right{
+			width: 100%;
+    		justify-content: space-between;
+    		margin-right: 0;
+		}
+	}
+	.comments{
+		&__p{
+			font-size: 14px;
+		}
+	}
+	.dropdown{
+		width: 720px;
+		&__box{
+			width: 47%;
+		}
+		&__title, &__price{
+			font-size: 12px;
+		}
+		&__itembox{
+			a{
+				font-size: 12px;
+			}
+			&_1{
+				margin-right: 15px;
+			}
+		}
+		&__item{
+			width: 165px;
+			&_brand{
+				width: 170px;
+			}
+			&_brand4{
+				margin-left: 0;
+			}
+			&_type{
+				width: 100%;
+			}
+			&_brand2{
+				width: 100%;
+			}
+			&_brand3{
+				margin-right: 0;
+			}
+		}
+		&__brand{
+			width: 60px;
+		}
+	}
+	/*Wishlist*/
+	.mainbox{
+		&__wishlist{
+			width: 95%;
+		}
+	}
+	/*Goods*/
+	.breadcrumbs{
+		width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 16px;
+	}
+	.filterbox{
+    	width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 16px;
+	}
+	.goods{
+		justify-content: space-around;
+	}
+	/*Feedback*/
+	.goodreview{
+		width: 95%;
+    	margin: 0 auto;
+		&__input{
+			&_1,&_2{
+			    width: 175px;
+			}
+		}
+	}
+	/*Card good*/
+	.cardgood{
+		width: 95%;
+    	margin: 0 auto 15px;
+		&__adv{
+			display: none;
+		}
+	}
+	.filtertabinfo{
+		width: 95%;
+    	margin: 0 auto 20px;
+	}
+	.maingoods{
+		&__cont{
+		    width: 95%;
+    		margin: 0 auto 25px;
+		}
+	}
+	/*Basket*/
+	.basket{
+		width: 95%;
+    	margin: 0 auto;
+    	&__li{
+    		a{
+    			font-size: 15px;
+    		}
+    	}
+	}
+	.perinfo{
+		&__subtitle{
+			width: 300px;
+			br{
+				display: none;
+			}
+		}
+		&__input{
+			&_1{
+				width: 155px;
+			}
+			&_2{
+				width: 155px;
+			}
+			&_3{
+				width: 180px;
+			}
+			&_5{
+				width: 355px;
+			}
+		}
+		&__right{
+			width: 285px;
+		}
+	}
+	.delpay{
+		&__item{
+			&:nth-child(4n){
+				margin-right: 13px;
+			}
+		}
+	}
+	.confirm{
+		&__right{
+			width: 265px;
+		}
+	}
+	/*Balance*/
+	.maintitle{
+		width: 95%;
+    	margin: 0 auto 15px;
+	}
+	.balance{
+		width: 95%;
+		margin: 0 auto 40px;
+		&__col{
+			&:last-child{
+				display: none;
+			}
+		}
+	}
+	/*Account*/
+	.account{
+		flex-wrap: wrap;
+		width: 95%;
+		margin: 0 auto;
+		&__left{
+			width: 100%;
+			margin-bottom: 15px;
+		}
+		&__right{
+			width: 100%;
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
-	
+	.maincont{
+		width: 100%;
+	}
+	.mainnav{
+		width: 100%;
+		ul{
+			flex-wrap: wrap;
+		}
+		li{
+			height: 33px;
+		}
+		a{
+			font-size: 12px;
+		}
+	}
+	.sidenav{
+		display: none;
+	}
+	.mainsearch{
+		width: 100%;
+		input{
+			width: 90%;
+		}
+		img{
+			right: 14%;
+		}
+	}
+	.banner{
+		width: 100%;
+		height: auto;
+		.slick-slide{
+			img{
+				width: 150%;
+			}
+		}
+	}
+	.bannercat{
+		display: none !important;
+	}
+	.advantages{
+		justify-content: space-around;
+		flex-wrap: wrap;
+		padding: 0;
+		margin-top: 0;
+		&__item{
+			border-top: 1px solid #e8e8e8;
+			border-right: 0;
+			width: 100%;
+			padding: 10px 0;
+			height: 55px;
+			&:last-child, &:first-child{
+				border-bottom: 0;
+			}
+		}
+	}
+	.filtertab{
+	    font: 400 12px "Roboto",sans-serif;
+    	margin-bottom: 10px;
+	}
+	.maingoods{
+		&__cont{
+			margin-bottom: 15px;
+		}
+	}
+	.categories{
+		justify-content: space-around;
+		&__item{
+			width: 95%;
+	    	max-width: 370px;
+	    	min-height: 192px;
+		}
+	}
+	.comments{
+		&__p{
+			max-width: 85%;
+			br{
+				display: none;
+			}
+		}
+	}
+	/*Wishlist*/
+	.mainbox{
+		&__wishlist{
+			width: 95%;
+		}
+	}
+	.wishlist{
+		height: auto;
+    	flex-wrap: wrap;
+    	padding: 15px;
+    	position: relative;
+    	&__name{
+    		margin-bottom: 7px;
+    	}
+    	&__controls{
+    		position: absolute;
+    		top: 12px;
+    		right: 15px;
+    	}
+    	&__items{
+    		flex-wrap: wrap;
+    		justify-content: space-around;
+    	}
+	}
+	.product{
+		margin-bottom: 15px;
+	}
+	/*Goods*/
+	.breadcrumbs{
+		width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 15px;
+    	ul{
+    		flex-wrap: wrap;
+    	}
+    	li{
+    		margin: 2px 0;
+    	}
+	}
+	.filterbox{
+		flex-wrap: wrap;
+	}
+	.filterbar{
+		flex-wrap: wrap;
+    	width: 95%;
+    	margin: 0 auto;
+    	margin-bottom: 16px;
+    	&__item{
+    		margin: 10px 5px 10px 0;
+    	}
+	}
+	.sortby{
+		width: 95%;
+    	margin: 0 auto 16px;
+	}
+	.goods{
+		justify-content: space-around;
+	}
+	.goodpager{
+		&__main {
+			a{
+				width: 23px;
+    			height: 23px;
+    			font-size: 13.77px;
+			}
+		}
+		&__prev, &__next{
+			width: 23px;
+    		height: 23px;
+		}
+	}
+	.maincont{
+		/*Interesting and viewed*/
+		.interesting,.viewed{
+			.product{
+				width: 210px;
+				&__name{
+					font-size: 16px;
+					height: 43px;
+				}
+				&__tip{
+				    padding: 1.5px 8px 3.5px;
+					font-size: 17px;
+				}
+				&__img{
+					height: 230px;
+					img{
+						height: 100%;
+					}
+					&_2{
+						img{
+							width: 60%;
+		    				height: auto;
+						}
+					}
+				}
+				&__price{
+					font-size: 16px;
+				}
+				&__btn{
+					font-size: 16px;
+					height: 42px;
+				}
+				&__left,&__right{
+					span{
+						font-size: 13px;
+					}
+				}
+				&__color,&__size{
+					width: 20px;
+					height: 20px;
+				}
+				&__color{
+					i{
+						font-size: 14px;
+					}
+				}
+				&__stars{
+					img{
+						width: 16px;
+					}
+				}
+				&__compare{
+					width: 38px;
+    				height: 25px;
+		    		right: 48px;
+		    		i{
+		    			width: 17px;
+		    		}
+				}
+				&__favorite{
+					width: 38px;
+    				height: 25px;
+		    		i{
+		    			width: 23px;
+		    			height: 23px;
+		    		}
+				}
+				&__size{
+					span{
+						font-size: 14px;
+					}
+				}
+			}
+		}
+		/*Interesting and viewed end*/
+	}
+	/*Feedback*/
+	.comment{
+		width: 95%;
+    	margin-left: auto;
+    	margin-right: auto;
+		&__top{
+		    flex-wrap: wrap;
+		}
+		&__info{
+		    margin-bottom: 15px;
+		    &_2{
+		    	margin-bottom: 10px;
+		    }
+		}
+		&__text{
+			width: 100%;
+			&_2{
+			    order: 1;
+			}
+		}
+		&__bott{
+			flex-wrap: wrap;
+		}
+	}
+	.goodreview{
+		width: 95%;
+    	margin: 0 auto;
+    	&__title{
+    		margin-bottom: 10px;
+    	}
+    	&__inputcont{
+    		flex-wrap: wrap;
+    	}
+    	&__inputbox{
+    		margin-bottom: 15px;
+    		width: 100%;
+    	}
+    	&__input{
+    		&_1{
+    			width: 100%;
+    		}
+    		&_2{
+    			width: 100%;
+    		}
+    		&_3{
+    			width: 100%;
+    		}
+    	}
+    	&__kapchacont{
+    		flex-wrap: wrap;
+    	}
+    	&__kapcha{
+    		margin-bottom: 10px;
+    	}
+	}
+	/*Card good*/
+	.cardgood{
+		flex-wrap: wrap;
+    	justify-content: space-around;
+    	&__adv{
+    		display: none;
+    	}
+	}
+	.maingoods{
+		&__cont{
+			width: 95%;
+    		margin: 0 auto 15px;
+		}
+	}
+	.characteristic{
+		flex-wrap: wrap;
+    	width: 95%;
+    	margin: 0 auto 20px;
+    	ul{
+    		margin-bottom: 20px;
+    	}
+	}
+	.filtertabinfo{
+		width: 95%;
+    	margin: 0 auto 20px;
+	}
+	/*Basket*/
+	.basket{
+		width: 95%;
+    	margin: 0 auto;
+    	&__nav{
+    		height: 48px;
+    		border: 0;
+    		border-bottom: 1px solid #e8e8e8;
+    		border-top: 1px solid #e8e8e8;
+    		border-radius: 0;
+    		ul{
+    			flex-wrap: wrap;
+    		}
+    	}
+    	&__li{
+    		border-radius: 0;
+    		width: 50%;
+    		a{
+    			font-size: 15px;
+    		}
+    	}
+    	&__row{
+    		flex-wrap: wrap;
+    	}
+    	&__title{
+    		&_1{
+    			display: none;
+    		}
+    		&_4{
+    			display: none;
+    		}
+    		&_2,&_3{
+    			width: 50px;
+    		}
+    		&_5{
+    			width: 80px;
+    		}
+    		&_6{
+    			width: 60px;
+    		}
+    		&_7{
+    			width: 95px;
+    		}
+    	}
+    	&__col{
+    		&_1{
+    			width: 65%;
+    			margin-bottom: 15px;
+    		}
+    		&_4{
+    			width: 27%;
+    			margin-bottom: 15px;
+    		}
+    		&_8{
+    			width: 6%;
+    			margin-bottom: 15px;
+    		}
+    		&_2,&_3{
+    			width: 50px;
+    		}
+    		&_5{
+    			width: 80px;
+    		}
+    		&_6{
+    			width: 60px;
+    		}
+    		&_7{
+    			width: 95px;
+    		}
+    	}
+    	&__buttcont{
+    		flex-wrap: wrap;
+    	}
+    	&__return{
+    		margin: 10px 0;
+    	}
+	}
+	.confirm{
+		&__left, &__right{
+			width: 100%;
+		}
+	}
+	.delpay{
+		&__cont{
+			justify-content: space-around;
+		}
+		&__item{
+			&:nth-child(4n){
+				margin-right: 13px;
+			}
+		}
+	}
+	.perinfo{
+		&__top{
+			flex-wrap: wrap;
+		}
+		&__choose{
+			margin-bottom: 10px;
+		}
+		&__subtitle{
+			br{
+				display: none;
+			}
+		}
+		&__box{
+			flex-wrap: wrap;
+		}
+		&__left{
+			margin-bottom: 15px;
+			width: 100%;
+		}
+		&__right{
+			width: 100%;
+		}
+		&__item{
+			width: 100%;
+		}
+		&__soctitle{
+			width: 88%;
+		}
+	}
+	.account{
+		&__input{
+			width: 100%;
+		}
+	}
+	/*Balance*/
+	.maintitle{
+		width: 95%;
+    	margin: 0 auto 15px;
+	}
+	.balance{
+		width: 95%;
+		margin: 0 auto 40px;
+		&__col{
+			display: none;
+			width: 47%;
+			&_1{
+				display: block;
+				width: 53%;
+			}
+			&:nth-child(2){
+				display: block;
+			}
+		}
+		&__row{
+			padding: 7px 0 7px 5px;
+		}
+		&__check{
+			left: 8px;
+		}
+		&__name{
+			width: 100%;
+		}
+	}
+	/*Account*/
+	.account{
+		flex-wrap: wrap;
+		width: 95%;
+		margin: 0 auto;
+		&__left{
+			width: 100%;
+    		margin-bottom: 15px;
+		}
+		&__right{
+			width: 100%;
+		}
+		&__comments{
+			width: 100%;
+		}
+	}
+	.profile{
+		&__right{
+			width: 100%;
+			padding-right: 0;
+		}
+	}
+	.address{
+		width: 100%;
+		&__name{
+			.checkboxlabel{
+				&:before{
+					bottom: 35%;
+				}
+			}
+		}
+	}
+	.btn{
+		&_address{
+			width: 33%;
+		}
+	}
+	.purchases{
+		width: 100%;
+		&__title{
+			.purchases__col_4{
+				display: none;
+			}
+		}
+		&__item{
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+		&__col{
+			margin: 5px 0;
+			&_1{
+				width: 25%;
+			}
+			&_2{
+				width: 45%;
+			}
+			&_3{
+				width: 30%;
+			}
+		}
+	}
+	.purchprod{
+		&__item{
+			padding: 0 10px 0 15px;
+		}
+		&__img{
+			margin-right: 10px;
+		}
+		&__desc{
+			width: calc(100% - 75px);
+		}
+		&__chars{
+			flex-wrap: wrap;
+		}
+		&__span{
+			margin: 5px 0;
+		}
+		&__listitem{
+			flex-wrap: wrap;
+			margin: 5px 0;
+		}
+		&__block{
+			padding: 10px 10px;
+		}
+	}
 }
 
 
