--- a/zernovarka/scss/layout/_content.scss
+++ b/zernovarka/scss/layout/_content.scss
@@ -195,7 +195,7 @@ h3{
 		color: #fff;
 	}
 }
-.adv{
+.adva{
 	background: #fff;
 	box-shadow: 0px 3px 35px 0px rgba(46, 46, 46, 0.09);
 	padding: 33px 0;
